--- a/index.html
+++ b/index.html
@@ -56,14 +56,26 @@
                         </li>
                         <li
                           >
-                          <a href="modules/lux.portable.html">
-                            lux.portable
+                          <a href="modules/lux.macro.html">
+                            lux.macro
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/stream.html">
-                            stream
+                          <a href="modules/lux.pack.html">
+                            lux.pack
+                          </a>
+                        </li>
+                        <li
+                          >
+                          <a href="modules/lux.path.html">
+                            lux.path
+                          </a>
+                        </li>
+                        <li
+                          >
+                          <a href="modules/lux.portable.html">
+                            lux.portable
                           </a>
                         </li>
                         <li
@@ -87,18 +99,6 @@
                       <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li
-                          >
-                          <a href="classes/macro.Processor.html">
-                            macro.Processor
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="classes/macro.Specification.html">
-                            macro.Specification
-                          </a>
-                        </li>
                         <li
                           >
                           <a href="classes/lux.struct.Queue.html">
