--- a/modules/lux.pack.html
+++ b/modules/lux.pack.html
@@ -4,7 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LUX Documentation and Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
     <link rel="stylesheet"
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script
@@ -13,6 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -55,6 +55,12 @@
                           </a>
                         </li>
                         <li
+                          >
+                          <a href="../modules/lux.macro.html">
+                            lux.macro
+                          </a>
+                        </li>
+                        <li
                           class="active">
                           <a href="../modules/lux.pack.html">
                             lux.pack
@@ -62,20 +68,14 @@
                         </li>
                         <li
                           >
+                          <a href="../modules/lux.path.html">
+                            lux.path
+                          </a>
+                        </li>
+                        <li
+                          >
                           <a href="../modules/lux.portable.html">
                             lux.portable
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/lux.std.html">
-                            lux.std
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/stream.html">
-                            stream
                           </a>
                         </li>
                         <li
@@ -99,18 +99,6 @@
                       <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li
-                          >
-                          <a href="../classes/macro.Processor.html">
-                            macro.Processor
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../classes/macro.Specification.html">
-                            macro.Specification
-                          </a>
-                        </li>
                         <li
                           >
                           <a href="../classes/lux.struct.Queue.html">
