--- a/modules/lux.pack.html
+++ b/modules/lux.pack.html
@@ -61,6 +61,12 @@
                           </a>
                         </li>
                         <li
+                          >
+                          <a href="../modules/lux.macro.takeover.html">
+                            lux.macro.takeover
+                          </a>
+                        </li>
+                        <li
                           class="active">
                           <a href="../modules/lux.pack.html">
                             lux.pack
