--- a/scripts/lux.macro.takeover.html
+++ b/scripts/lux.macro.takeover.html
@@ -12,7 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
-    <link rel="stylesheet" href="ldoc.css" type="text/css" />
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -44,55 +44,49 @@
                     <ul class="dropdown-menu">
                         <li
                           >
-                          <a href="modules/lux.functional.html">
+                          <a href="../modules/lux.functional.html">
                             lux.functional
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.info.html">
+                          <a href="../modules/lux.info.html">
                             lux.info
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.macro.html">
+                          <a href="../modules/lux.macro.html">
                             lux.macro
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.macro.takeover.html">
-                            lux.macro.takeover
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="modules/lux.pack.html">
+                          <a href="../modules/lux.pack.html">
                             lux.pack
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.path.html">
+                          <a href="../modules/lux.path.html">
                             lux.path
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.portable.html">
+                          <a href="../modules/lux.portable.html">
                             lux.portable
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.color.html">
+                          <a href="../modules/lux.color.html">
                             lux.color
                           </a>
                         </li>
                         <li
                           >
-                          <a href="modules/lux.test.html">
+                          <a href="../modules/lux.test.html">
                             lux.test
                           </a>
                         </li>
@@ -107,7 +101,7 @@
                     <ul class="dropdown-menu">
                         <li
                           >
-                          <a href="classes/lux.struct.Queue.html">
+                          <a href="../classes/lux.struct.Queue.html">
                             lux.struct.Queue
                           </a>
                         </li>
@@ -122,19 +116,19 @@
                     <ul class="dropdown-menu">
                         <li
                           >
-                          <a href="prototypes/lux.class.html">
+                          <a href="../prototypes/lux.class.html">
                             lux.class
                           </a>
                         </li>
                         <li
                           >
-                          <a href="prototypes/lux.prototype.html">
+                          <a href="../prototypes/lux.prototype.html">
                             lux.prototype
                           </a>
                         </li>
                         <li
                           >
-                          <a href="prototypes/lux.datastruct.List.html">
+                          <a href="../prototypes/lux.datastruct.List.html">
                             lux.datastruct.List
                           </a>
                         </li>
@@ -149,8 +143,23 @@
                     <ul class="dropdown-menu">
                         <li
                           >
-                          <a href="examples/some.lua.html">
+                          <a href="../examples/some.lua.html">
                             some.lua
+                          </a>
+                        </li>
+                    </ul>
+                  </li>
+                  <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown"
+                       href="#">
+                      Scripts
+                      <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li
+                          class="active">
+                          <a href="../scripts/lux.macro.takeover.html">
+                            lux.macro.takeover
                           </a>
                         </li>
                     </ul>
@@ -187,16 +196,22 @@
 
 
               <h1>
-                LUX Project <small>documentation and reference pages</small>
+                lux.macro.takeover
+                <small>a LUX </small>
               </h1>
 
               <div class="row" style="height:2em"></div>
 
-                <p>Lua Utility eXTension is a Lua-only library compatible with Lua 5.1 through
-Lua 5.3 which provides a handful of features for everyday Lua programming that
-cannot be found in the standard library of the language.</p>
+              <p>
+                This script takes over Lua&rsquo;s require mechanism and enforces that all lua
+  loaded scripts be pre-processed by LUX&rsquo;s macro engine.
 
-                <p>WIP</p>
+
+              </p>
+
+
+
+
 
 
           </div> <!-- id="content" -->
