--- a/prototypes/lux.class.html
+++ b/prototypes/lux.class.html
@@ -62,6 +62,12 @@
                         </li>
                         <li
                           >
+                          <a href="../modules/lux.macro.takeover.html">
+                            lux.macro.takeover
+                          </a>
+                        </li>
+                        <li
+                          >
                           <a href="../modules/lux.pack.html">
                             lux.pack
                           </a>
@@ -191,7 +197,9 @@
                 A class-based implementation object oriented programming.
                   Ironically, this is actually a prototype, which means it inherits from
   <a href="../prototypes/lux.prototype.html#">lux.prototype</a>, but otherwise provides its own mechanism for OOP.
-  Be sure to check <a href="../prototypes/lux.class.html#class:instance">instance</a>, <a href="../prototypes/lux.class.html#class:inherit">inherit</a> and <a href="../prototypes/lux.class.html#class:super">super</a> usages.
+  Be sure to check <a href="../prototypes/lux.class.html#class:instance">instance</a>, <a href="../prototypes/lux.class.html#class:inherit">inherit</a> and <a href="../prototypes/lux.class.html#class:super">super</a> usages.</p>
+
+<p>  <strong><em>This module requires macro takeover in order to work properly</em></strong>
               </p>
 
 
@@ -211,15 +219,17 @@
                     <dt>
                       <a name = "class:instance"></a>
                       <h3 class="text-primary">
-                        class:instance&nbsp;(obj, ...)
+                        class:instance&nbsp;(_ENV, ...)
                       </h3>
                     </dt>
                     <dd>
                       Defines how an instance of the class should be constructed.
                         This function is supposed to only be overriden, not called from the user&rsquo;s
-  side. By populating the <code>obj</code> parameter provided in this
-  factory-like strategy method is what creates class instances in this OOP
-  feature.
+  side. By populating the <code>_ENV</code> parameter provided in this factory-like
+  strategy method is what creates class instances in this OOP feature.
+  This is actually done automatically: every &ldquo;global&rdquo; variable or function
+  you define inside this function is instead stored as a corresponding object
+  field.
 
                           <h4>Parameters:</h4>
                         <ul>
@@ -228,9 +238,9 @@
                                   <strong class="text-type">
                                       <span class="type">object</span>
                                   </strong>
-                                  obj</kbd>
+                                  _ENV</kbd>
                                 <p>
-                                   The to-be-constructed object
+                                    The to-be-constructed object. Its name must be exactly <code>_ENV</code>
                                 </p>
                                 </li>
                               <li>
@@ -240,7 +250,7 @@
                                   </strong>
                                   ...</kbd>
                                 <p>
-                                   Arguments required by the construction
+                                    Arguments required by the construction of objects from the current class
                                 </p>
                                 </li>
                         </ul>
@@ -251,15 +261,32 @@
 
                             <pre class="example">
   <span class="keyword">local</span> MyClass = <span class="global">require</span> <span class="string">'lux.class'</span> :new{}
-  <span class="keyword">function</span> MyClass:instance (obj, x)
-    <span class="keyword">local</span> a_number = <span class="number">42</span>
-    <span class="keyword">function</span> obj:show ()
+  <span class="keyword">local</span> <span class="global">print</span> = <span class="global">print</span> <span class="comment">-- must explicitly enclosure dependencies
+</span>  <span class="keyword">function</span> MyClass:instance (_ENV, x)
+    <span class="comment">-- public field
+</span>    y = <span class="number">1337</span>
+    <span class="comment">-- private field
+</span>    <span class="keyword">local</span> a_number = <span class="number">42</span>
+    <span class="comment">-- public method
+</span>    <span class="keyword">function</span> show ()
       <span class="global">print</span>(a_number + x)
     <span class="keyword">end</span>
-  <span class="keyword">end</span></pre>
+  <span class="keyword">end</span>
+
+  myobj = MyClass(<span class="number">8001</span>)
+  <span class="comment">-- call without colons!
+</span>  myobj.show()</pre>
 
                         </ul>
 
+                        <h4>See also:</h4>
+                        <ul>
+
+                            <a href="../examples/some.lua.html#">
+                              some.lua
+                            </a>
+
+                        </ul>
 
                     </dd>
                     <div class="row" style="height:2em"></div>
@@ -286,7 +313,7 @@
                                   </strong>
                                   another_class</kbd>
                                 <p>
-                                   The class being inherited from
+                                    The class being inherited from
                                 </p>
                                 </li>
                         </ul>
@@ -336,7 +363,7 @@
                                   </strong>
                                   ...</kbd>
                                 <p>
-                                   The constructor parameters as specified in the <a href="../prototypes/lux.class.html#class:instance">instance</a>
+                                    The constructor parameters as specified in the <a href="../prototypes/lux.class.html#class:instance">instance</a>
                                 </p>
                                 </li>
                         </ul>
@@ -348,7 +375,6 @@
                               <span class="type">object</span></strong></kbd>
                               <p>
                                 A new instance from the current class.
-  definition
                               </p>
 
                           </ol>
@@ -377,7 +403,8 @@
                                   </strong>
                                   obj</kbd>
                                 <p>
-                                   The object being constructed by the child class
+                                    The object being constructed by the child class, that is, the <code>_ENV</code>
+  parameter passed to <a href="../prototypes/lux.class.html#class:instance">instance</a>
                                 </p>
                                 </li>
                               <li>
@@ -387,7 +414,7 @@
                                   </strong>
                                   ...</kbd>
                                 <p>
-                                   The parent class' constructor parameters
+                                    The parent class' constructor parameters
                                 </p>
                                 </li>
                         </ul>
@@ -398,8 +425,8 @@
 
                             <pre class="example">
   <span class="comment">-- After ChildClass inherited ParentClass
-</span>  <span class="keyword">function</span> ChildClass:instance (obj, x, y)
-    self:super(obj, x + y) <span class="comment">-- parent's constructor parameters
+</span>  <span class="keyword">function</span> ChildClass:instance (_ENV, x, y)
+    self:super(_ENV, x + y) <span class="comment">-- parent's constructor parameters
 </span>    <span class="comment">-- Finish instancing
 </span>  <span class="keyword">end</span></pre>
 
